# opengl-quickstart

./: .gitignore  CMakeLists.txt  LICENSE  README-EN.md  README.md
src/: main.cpp
